--- a/app/client/main.css
+++ b/app/client/main.css
@@ -25,7 +25,15 @@
 .stuff {
     margin-top: 3em;
 }
-.image {
-    max-height: 50vh;
+img {
+    height: 10em;
+    width: 10em;
+}
+td {
+    height:10em;
+    width: 10em;
+}
+.row {
+    margin-top: 0.8em !important;
 }
 
