--- a/app/client/main.css
+++ b/app/client/main.css
@@ -26,8 +26,8 @@
     margin-top: 3em;
 }
 img {
-    height: 10em;
-    width: 10em;
+    height: 100%;
+    width: 100%;
 }
 td {
     height:10em;
